standardized quotation marks in script

--- a/4hw/index.html
+++ b/4hw/index.html
@@ -11,25 +11,25 @@
 </head>
 <body>
   <header>
-    <div class='container'>
-      <div class='row'>
-        <div class='column'>
+    <div class="container">
+      <div class="row:"">
+        <div class="column">
          <h1>Coding Quiz!</h1>
         </div>
       </div>
     </div>
   </header>
   <main class="container-lg full-width p-0">
-    <div class='card shadow-sm'>
-        <div class='card-header bg-transparent'>
+    <div class="card shadow-sm">
+        <div class="card-header bg-transparent">
             <h3 class="align-middle text-center" id="top">Coding Quiz!</h3>
             <h6 class="text-right align-middle" id="countdown"></h6>
         </div>
-        <div class='card-body text-center'>
-          <p class='card-text' id='center'>Take this coding quiz! 15 Seconds per question! Try to get a hi-score!</p>
-          <ol class='card-text text-left' id='hanger'></ol>
+        <div class="card-body text-center">
+          <p class="card-text" id="center">Take this coding quiz! 15 Seconds per question! Try to get a hi-score!</p>
+          <ol class="card-text text-left" id="hanger"></ol>
           <div id="nameField">
-            <p class='card-text'>Please enter your name and click the button to save your high score!</p>
+            <p class="card-text">Please enter your name and click the button to save your high score!</p>
             <div class="form">
               <input type="text" class="form align-middle" id="name" placeholder="Your name here!">
               <button class="btn btn-success btn-sm align-middle" type="button" id="save">Save</button>
@@ -37,7 +37,7 @@
           </div>
         </div>
       
-        <div class='card-footer text-center bg-transparent' id='bottom'>
+        <div class="card-footer text-center bg-transparent" id="bottom">
             <button type="button" class="btn btn-primary" id="start"> Start </button>
             <button type="button" class="btn btn-danger" id="view">Scoreboard</button>
         </div>
