established repeatable, starting style for list rows/columns

--- a/5hw/index.html
+++ b/5hw/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
-
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
@@ -29,7 +28,21 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class= "col-sm-2 hour">
+          <p>9:00</p>
+        </div>
+        <div class="col-lg-8 textArea future">
+          <div class="input-group input-group-lg">
+            <input type="text" class="form-control"></input>
+          </div>
+        </div>
+        <div class="col-sm-2 saveBtn">
+        </div>
+      </div>
+      
+      
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
