--- a/5hw/index.html
+++ b/5hw/index.html
@@ -38,7 +38,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
@@ -51,7 +51,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
@@ -64,7 +64,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
@@ -77,7 +77,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
@@ -90,7 +90,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
@@ -103,7 +103,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
@@ -116,7 +116,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
@@ -129,7 +129,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
@@ -142,7 +142,7 @@
             <input type="text" class="form-control"></input>
           </div>
         </div>
-        <div class="col-2 saveBtn">
+        <div class="col-2 btn saveBtn">
         </div>
       </div>
 
