still working on save function-reworked middle columns w/ textarea tags rather than containing inputs, making them more accesible through dom

--- a/5hw/index.html
+++ b/5hw/index.html
@@ -33,11 +33,8 @@
         <div class= "col-2 hour">
           <p id="hour-1">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="0">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="0">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
@@ -46,11 +43,8 @@
         <div class= "col-2 hour">
           <p id="hour-2">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="1">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="1">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
@@ -59,11 +53,8 @@
         <div class= "col-2 hour">
           <p id="hour-3">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="2">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="2">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
@@ -72,11 +63,8 @@
         <div class= "col-2 hour">
           <p id="hour-4">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="3">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="3">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
@@ -85,11 +73,8 @@
         <div class= "col-2 hour">
           <p id="hour-5">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="4">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="4">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
@@ -98,11 +83,8 @@
         <div class= "col-2 hour">
           <p id="hour-6">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="5">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="5">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
@@ -111,11 +93,8 @@
         <div class= "col-2 hour">
           <p id="hour-7">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="6">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="6">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
@@ -124,11 +103,8 @@
         <div class= "col-2 hour">
           <p id="hour-8">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="7">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="7">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
@@ -137,11 +113,8 @@
         <div class= "col-2 hour">
           <p id="hour-9">9:00</p>
         </div>
-        <div class="col-8 textArea future" id="8">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control"></input>
-          </div>
-        </div>
+        <textarea class="col-8 future" id="8">
+        </textarea>
         <div class="col-2 btn saveBtn">
         </div>
       </div>
