button complete, items are tagged w/ their time and saved to local storage

--- a/5hw/index.html
+++ b/5hw/index.html
@@ -33,9 +33,9 @@
         <div class= "col-2 hour">
           <p id="hour-1">9:00</p>
         </div>
-        <textarea class="col-8 future" id="0">
+        <textarea class="col-8 future" data-index="0" id="0">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn" data-index="0">
         </div>
       </div>
 
@@ -43,9 +43,9 @@
         <div class= "col-2 hour">
           <p id="hour-2">9:00</p>
         </div>
-        <textarea class="col-8 future" id="1">
+        <textarea class="col-8 future" data-index="1" id="1">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn" data-index="1">
         </div>
       </div>
 
@@ -53,9 +53,9 @@
         <div class= "col-2 hour">
           <p id="hour-3">9:00</p>
         </div>
-        <textarea class="col-8 future" id="2">
+        <textarea class="col-8 future" data-index="2" id="2">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn" data-index="2">
         </div>
       </div>
 
@@ -63,9 +63,9 @@
         <div class= "col-2 hour">
           <p id="hour-4">9:00</p>
         </div>
-        <textarea class="col-8 future" id="3">
+        <textarea class="col-8 future" data-index="3" id="3">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn" data-index="3">
         </div>
       </div>
 
@@ -73,9 +73,9 @@
         <div class= "col-2 hour">
           <p id="hour-5">9:00</p>
         </div>
-        <textarea class="col-8 future" id="4">
+        <textarea class="col-8 future" data-index="4" id="4">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn" data-index="4">
         </div>
       </div>
 
@@ -83,9 +83,9 @@
         <div class= "col-2 hour">
           <p id="hour-6">9:00</p>
         </div>
-        <textarea class="col-8 future" id="5">
+        <textarea class="col-8 future" data-index="5" id="5">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn" data-index="5">
         </div>
       </div>
 
@@ -93,9 +93,9 @@
         <div class= "col-2 hour">
           <p id="hour-7">9:00</p>
         </div>
-        <textarea class="col-8 future" id="6">
+        <textarea class="col-8 future" data-index="6" id="6">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn" data-index="6">
         </div>
       </div>
 
@@ -103,9 +103,9 @@
         <div class= "col-2 hour">
           <p id="hour-8">9:00</p>
         </div>
-        <textarea class="col-8 future" id="7">
+        <textarea class="col-8 future" data-index="7" id="7">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn" data-index="7">
         </div>
       </div>
 
@@ -113,9 +113,9 @@
         <div class= "col-2 hour">
           <p id="hour-9">9:00</p>
         </div>
-        <textarea class="col-8 future" id="8">
+        <textarea class="col-8 future" data-index="8" id="8">
         </textarea>
-        <div class="col-2 btn saveBtn">
+        <div class="col-2 btn saveBtn"data-index="8">
         </div>
       </div>
 
