added html comment, save icon to buttons

--- a/5hw/index.html
+++ b/5hw/index.html
@@ -28,14 +28,16 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-    <div class="container">
+    <main class="container">
+      <!--Each row contains 3 colums-the time, the input field, and the save button, identified by class, id, and data index respectively.-->
       <div class="row">
         <div class= "col-2 hour">
           <p id="hour-1">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="0" id="0">
+        <textarea class="col-8 future" id="0">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="0">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
@@ -43,9 +45,10 @@
         <div class= "col-2 hour">
           <p id="hour-2">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="1" id="1">
+        <textarea class="col-8 future" id="1">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="1">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
@@ -53,9 +56,10 @@
         <div class= "col-2 hour">
           <p id="hour-3">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="2" id="2">
+        <textarea class="col-8 future" id="2">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="2">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
@@ -63,9 +67,10 @@
         <div class= "col-2 hour">
           <p id="hour-4">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="3" id="3">
+        <textarea class="col-8 future" id="3">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="3">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
@@ -73,9 +78,10 @@
         <div class= "col-2 hour">
           <p id="hour-5">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="4" id="4">
+        <textarea class="col-8 future" id="4">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="4">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
@@ -83,9 +89,10 @@
         <div class= "col-2 hour">
           <p id="hour-6">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="5" id="5">
+        <textarea class="col-8 future" id="5">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="5">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
@@ -93,9 +100,10 @@
         <div class= "col-2 hour">
           <p id="hour-7">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="6" id="6">
+        <textarea class="col-8 future" id="6">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="6">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
@@ -103,9 +111,10 @@
         <div class= "col-2 hour">
           <p id="hour-8">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="7" id="7">
+        <textarea class="col-8 future" id="7">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="7">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
@@ -113,14 +122,15 @@
         <div class= "col-2 hour">
           <p id="hour-9">9:00</p>
         </div>
-        <textarea class="col-8 future" data-index="8" id="8">
+        <textarea class="col-8 future" id="8">
         </textarea>
         <div class="col-2 btn saveBtn"data-index="8">
+          <i class="fas fa-save"></i>
         </div>
       </div>
 
 
-    </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
