--- a/5hw/index.html
+++ b/5hw/index.html
@@ -45,7 +45,7 @@
         <div class= "col-2 hour">
           <p id="hour-2">9:00</p>
         </div>
-        <textarea class="col-8 future" id="1">
+        <textarea rows="3"class="col-8 future" id="1">
         </textarea>
         <div class="col-2 btn saveBtn" data-index="1">
           <i class="fas fa-save"></i>
