buttons now have: button tags

--- a/5hw/index.html
+++ b/5hw/index.html
@@ -36,20 +36,20 @@
         </div>
         <textarea class="col-8 future" id="0">
         </textarea>
-        <div class="col-2 btn saveBtn" data-index="0">
+        <button class="col-2 btn saveBtn" data-index="0">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
       <div class="row">
         <div class= "col-2 hour">
           <p id="hour-1">9:00</p>
         </div>
-        <textarea rows="3"class="col-8 future" id="1">
+        <textarea rows="3" class="col-8 future" id="1">
         </textarea>
-        <div class="col-2 btn saveBtn" data-index="1">
+        <button class="col-2 btn saveBtn" data-index="1">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
       <div class="row">
@@ -58,9 +58,9 @@
         </div>
         <textarea class="col-8 future" id="2">
         </textarea>
-        <div class="col-2 btn saveBtn" data-index="2">
+        <button class="col-2 btn saveBtn" data-index="2">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
       <div class="row">
@@ -69,9 +69,9 @@
         </div>
         <textarea class="col-8 future" id="3">
         </textarea>
-        <div class="col-2 btn saveBtn" data-index="3">
+        <button class="col-2 btn saveBtn" data-index="3">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
       <div class="row">
@@ -80,9 +80,9 @@
         </div>
         <textarea class="col-8 future" id="4">
         </textarea>
-        <div class="col-2 btn saveBtn" data-index="4">
+        <button class="col-2 btn saveBtn" data-index="4">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
       <div class="row">
@@ -91,9 +91,9 @@
         </div>
         <textarea class="col-8 future" id="5">
         </textarea>
-        <div class="col-2 btn saveBtn" data-index="5">
+        <button class="col-2 btn saveBtn" data-index="5">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
       <div class="row">
@@ -102,9 +102,9 @@
         </div>
         <textarea class="col-8 future" id="6">
         </textarea>
-        <div class="col-2 btn saveBtn" data-index="6">
+        <button class="col-2 btn saveBtn" data-index="6">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
       <div class="row">
@@ -113,9 +113,9 @@
         </div>
         <textarea class="col-8 future" id="7">
         </textarea>
-        <div class="col-2 btn saveBtn" data-index="7">
+        <button class="col-2 btn saveBtn" data-index="7">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
       <div class="row">
@@ -124,9 +124,9 @@
         </div>
         <textarea class="col-8 future" id="8">
         </textarea>
-        <div class="col-2 btn saveBtn"data-index="8">
+        <button class="col-2 btn saveBtn" data-index="8">
           <i class="fas fa-save"></i>
-        </div>
+        </button>
       </div>
 
 
