--- a/6hw/index.html
+++ b/6hw/index.html
@@ -22,9 +22,9 @@
         <div class="sidebar-sticky pt-3">
           <div class="nav flex-column">
             <form class="input-group nav-item">
-              <input type="text" class="form control" placeholder=""/>
+              <input type="text" class="form control" id="search-inp" placeholder=""/>
               <div class="input-group-append">
-                <button class="btn-primary">
+                <button class="btn-primary" id="search-btn">
                   <i class="fas fa-search"></i>
                 </button>
               </div>
@@ -42,6 +42,10 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
