--- a/6hw/index.html
+++ b/6hw/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow">
+  <!--<header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow">
       <h2 class="navbar-text">Weather Dashboard</h2>
-  </header>
+  </header> !-->
 
   <div class="container-fluid">
     <div class="row">
@@ -33,6 +33,8 @@
         </div>
       </nav>
       <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+        <div id="main">
+        </div>
       </main>
     </div>
     
