updated key src. committed with in progress sub row html

--- a/6hw/index.html
+++ b/6hw/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow">
+  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow justify-content-center">
       <h2 class="navbar-text">Weather Dashboard</h2>
   </header> 
 
@@ -35,6 +35,11 @@
       <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         <div id="main">
         </div>
+        <footer class="row">
+          <div class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+            <p>test zone</p>
+          </div>
+        </footer>
       </main>
     </div>
     
@@ -48,7 +53,7 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-  <script src="../../weatherkey/config.js"></script>
+  <script src="weatherkey/config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
