--- a/6hw/index.html
+++ b/6hw/index.html
@@ -35,14 +35,13 @@
       <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         <div id="main">
         </div>
-        <footer class="row">
-          <div class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-            <p>test zone</p>
+        <div class="row">
+          <div class="col">
+            <div id="sub">
+            </div>
           </div>
-        </footer>
-      </main>
-    </div>
-    
+        </div>
+      </main>  
   </div>
  
   
