--- a/6hw/index.html
+++ b/6hw/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <div id="sub">
+            <div class="row"id="sub">
             </div>
           </div>
         </div>
