--- a/6hw/index.html
+++ b/6hw/index.html
@@ -18,7 +18,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <nav class="col-2 d-md-block bg-light sidebar">
+      <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
         <div class="sidebar-sticky pt-3">
           <div class="nav flex-column">
             <form class="input-group nav-item">
@@ -32,12 +32,12 @@
           </div>
         </div>
       </nav>
-      <main class="col-10">
+      <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         <div id="main">
         </div>
         <div class="row">
-          <div class="col px-md-4">
-            <div class="row"id="sub">
+          <div class="col">
+            <div class="row" id="sub">
             </div>
           </div>
         </div>
