changed sidebar buttons to list group, looks better. reorganized functions.

--- a/6hw/index.html
+++ b/6hw/index.html
@@ -20,15 +20,19 @@
     <div class="row">
       <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
         <div class="sidebar-sticky pt-3">
-          <div class="nav flex-column">
-            <form class="input-group nav-item">
-              <input type="text" class="form control" id="search-inp" placeholder=""/>
-              <div class="input-group-append">
-                <button class="btn-primary" id="search-btn">
-                  <i class="fas fa-search"></i>
-                </button>
+          <div class="nav flex-column nav-justified">
+            <form class="form-inline">
+              <div class="input-group">
+                <input type="text" class="form control" id="search-inp" placeholder=""/>
+                <div class="input-group-append">
+                  <button class="btn-primary" id="search-btn">
+                    <i class="fas fa-search"></i>
+                  </button>
+                </div>
               </div>
             </form>
+            <ul class="list-group">
+            </ul>
           </div>
         </div>
       </nav>
