testing a different script src for deployed page

--- a/6hw/index.html
+++ b/6hw/index.html
@@ -56,7 +56,7 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-  <script src="weatherkey/config.js"></script>
+  <script src="https://github.com/mavn2/weatherkey/blob/49ce5d16e7ebfddf2279ce1b7c037af220567816/config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
