--- a/6hw/index.html
+++ b/6hw/index.html
@@ -18,7 +18,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+      <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="sidebar-sticky pt-3">
           <div class="nav flex-column nav-justified">
             <form class="form-inline">
@@ -36,16 +36,14 @@
           </div>
         </div>
       </nav>
+
       <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         <div id="main">
         </div>
-        <div class="row">
-          <div class="col">
-            <div class="row" id="sub">
-            </div>
-          </div>
+        <div class="card-deck" id="sub">
         </div>
       </main>  
+    </div>
   </div>
  
   
@@ -56,7 +54,7 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-  <script src="https://github.com/mavn2/classrep/tree/master/6hw/weatherkey+@+49ce5d1/config"></script>
+  <script src="weatherkey/config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
