--- a/6hw/index.html
+++ b/6hw/index.html
@@ -21,6 +21,7 @@
       <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="sidebar-sticky pt-3">
           <div class="nav flex-column nav-justified">
+            <h5>Search for a City:</h5>
             <form class="form-inline">
               <div class="input-group">
                 <input type="text" class="form control" id="search-inp" placeholder=""/>
