nav  header text, color changed.

--- a/6hw/index.html
+++ b/6hw/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow justify-content-center">
-      <h2 class="navbar-text">Weather Dashboard</h2>
+      <h2 class="brand">Weather Dashboard</h2>
   </header> 
 
   <div class="container-fluid">
