--- a/6hw/index.html
+++ b/6hw/index.html
@@ -31,6 +31,7 @@
         <div class="sidebar-sticky pt-3">
           <div class="nav flex-column nav-justified">
             <h5>Search for a City:</h5>
+            <form class="form-inline">
               <div class="input-group">
                 <input type="text" class="form control" id="search-inp" placeholder=""/>
                 <div class="input-group-append">
@@ -39,6 +40,7 @@
                   </button>
                 </div>
               </div>
+            </form>
             <ul class="list-group">
             </ul>
           </div>
