--- a/6hw/index.html
+++ b/6hw/index.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow justify-content-center">
-      <h2 class="brand navbar-brand col-md-3 col-lg-2 mr-0 px-3">Weather Dashboard</h2>
+  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow">
+      <h2 class="navbar-brand col-md-3 col-lg-2 mr-0 px-3">Weather Dashboard</h2>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
