cloned with https, should work for page

--- a/6hw/index.html
+++ b/6hw/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow">
+  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow justify-content-center">
       <h2 class="navbar-brand col-md-3 col-lg-2 mr-0 px-3">Weather Dashboard</h2>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu">
         <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-  <script src="weatherkey/config.js"></script>
+  <script src="weatherkey @ 49ce5d1/config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
