--- a/6hw/index.html
+++ b/6hw/index.html
@@ -70,7 +70,7 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-  <script src="weatherkey @ 49ce5d1/config.js"></script>
+  <script src="../weatherkey/config.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
