--- a/6hw/index.html
+++ b/6hw/index.html
@@ -4,29 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href = "style.css"/>
+  <!--Bootstrap stylesheet-->
   <link rel="stylesheet" 
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
     crossorigin="anonymous"/>
+  <!--Font Awesome stylesheet-->
   <link rel="stylesheet" 
     href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
-    crossorigin="anonymous"
-/>
+    crossorigin="anonymous"/>
+  <!--Additional/Personal stylesheet-->
   <link rel="stylesheet" href = "style.css"/>
   <title>Weather Dashboard</title>
 </head>
 
 <body>
-  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap p-0 shadow justify-content-center">
+  <!--HTML used below is based on a dashboard template provided in the Bootstrap 4.5 documentation-->
+  <!--Header-->
+  <header class="navbar navbar-dark bg-dark sticky-top flex-md-nowrap shadow justify-content-center">
       <h2 class="navbar-brand col-md-3 col-lg-2 mr-0 px-3">Weather Dashboard</h2>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
   </header> 
-
+  <!--Page body-->
   <div class="container-fluid">
     <div class="row">
+      <!--Sidebar-->
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="sidebar-sticky pt-3">
           <div class="nav flex-column nav-justified">
@@ -46,7 +51,7 @@
           </div>
         </div>
       </nav>
-
+      <!--Empty div, structures generated elements-->
       <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         <div id="main">
         </div>
@@ -56,7 +61,7 @@
     </div>
   </div>
  
-  
+  <!--JQuery and Bootstrap API scripts-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
     crossorigin="anonymous"></script>
@@ -70,6 +75,7 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
+  <!--Personal scripts-->
   <script src="../weatherkey/config.js"></script>
   <script src="script.js"></script>
 </body>
