--- a/2hw/contact.html
+++ b/2hw/contact.html
@@ -15,12 +15,12 @@
   <!--Navbar Header and Button-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <a class="navbar-brand">Max Nicolai</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-  <!--Navbar Links-->
+            <!--Navbar Links-->
             <li class="nav-item">
               <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
             </li>
@@ -47,18 +47,18 @@
         <form>
           <!--Name Input-->
           <div class="form-group">
-            <label for="FormControlInput1">Name</label>
-              <input type="name" class="form-control" id="FormControlInput1" placeholder="J Doe">
+            <label for="name">Name</label>
+              <input type="text" class="form-control" id="name" placeholder="J Doe">
           </div>
           <!--Email Input-->
           <div class="form-group">
-            <label for="FormControlInput2">Email address</label>
-            <input type="email" class="form-control" id="FormControlInput2" placeholder="name@example.com">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="name@example.com">
           </div>
           <!--Message Input-->
           <div class="form-group">
-            <label for="FormControlTextarea1"> Message</label>
-              <textarea class="form-control" id="FormControlTextarea1" rows="3"></textarea>
+            <label for="message"> Message</label>
+              <textarea class="form-control" id="message" rows="3"></textarea>
           </div>
         </form>
         <!--Submit/Send button-->
