--- a/2hw/index.html
+++ b/2hw/index.html
@@ -15,56 +15,60 @@
   <!--Navbar Header and Button-->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light">
     <a class="navbar-brand">Max Nicolai</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-  <!--Navbar Links-->
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <!--Navbar Links-->
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
   </nav>
-    <!--Page Header-->
+
+  <!--Page Header-->
   <main class="container">
     <div class="row justify-content-start">
       <div class="col-md head">
         <h2>About Me</h2>
-        </div>
+      </div>
     </div>
-      <!--Container for About Me-->
+    <!--Container for About Me-->
     <div class="row justify-content-start" id="bio">
-        <div class="col-md">
-          <div class="card mb-3 border-0">
-      <!--Bio Image-->
-              <div class="row no-gutters">
-                <div class="col-md-3">
-                  <img src="hshot.jpg" class="img-fluid card-img" alt="A picture of me where I don't look too uncomfortable.">
-                </div>
-        <!--Bio Text-->
-              <div class="col-md-9">
-                <article class="card-text">
+      <div class="col-md">
+        <div class="card mb-3 border-0">
+          <!--Bio Image-->
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <img src="hshot.jpg" class="img-fluid card-img" alt="A picture of me where I don't look too uncomfortable.">
+            </div>
+            <!--Bio Text-->
+            <div class="col-md-9">
+              <article class="card-text">
+                <h3>About Me</h3>
+                <p>
                   My earliest passions were books and music, art that allowed me to expand my horizons and experience, at least on some level, the world through others' eyes.
                   I found my third passion in the internet. Nowhere else could I explore as easily, learn as readily, connect as eagerly. For a long time, I gave all credit to what I found there for shaping
-                  the person I became, but as the internet changed in the last decade, I have become more and more aware of how affected I was by the shape and function of the network itself.
-                  <br><br>
+                  the person I became, but as the internet changed in the last decade, I have become more and more aware of how affected I was by the shape and function of the network itself. 
+                </p>
+                <p>
                   Studying English in college, I focused on examing the ways in which form dictates the terms of our experience with content--is, really, content in itself. My interests in coding are 
                   the same: user experience, but more than that the structures that store, catalogue, and surface information to be experienced. I am interested in databases, in data analytics, in what we can
                   learn from what our devices learn about us. In sum, I remain as much as love with learning as I have always been, eager to challenge myself and eager to find new ways to think and to create.
-                </article>
-                
-              </div>
+                </p>
+              </article>
             </div>
           </div>
         </div>
+      </div>
     </div>    
   </main>
 
